# Layering-Detection-Analytics

./: .dockerignore  .gitignore  Dockerfile  README.md  assignment  docker-compose.yml  main.py  pyproject.toml
.github/workflows/: README.md  ci.yml
input/: transactions.csv
logs/: detections.csv
output/: suspicious_accounts.csv
services/aggregator-service/: Dockerfile  README.md  config.py  main.py  merger.py  requirements.txt  validation.py  writer.py
services/layering-service/: .dockerignore  Dockerfile  README.md  config.py  main.py  requirements.txt
services/orchestrator-service/: .dockerignore  Dockerfile  README.md  client.py  config.py  main.py  orchestrator.py  path_validation.py  reader.py  requirements.txt  retry.py  utils.py  validation.py
services/shared/: __init__.py  api_models.py  config.py  converters.py  error_sanitization.py  logging.py  rate_limiting.py  request_limits.py
specs/: ARCHITECTURE.md  FEATURE-algorithm-registry.md  FEATURE-api-contracts.md  FEATURE-deduplication.md  FEATURE-domain-models.md  FEATURE-logging-observability.md  FEATURE-microservices-index.md  FEATURE-pipeline-orchestration.md  TASKS-kubernetes-migration.md  TASKS-microservices-implementation.md  data-layering-detection.md  deployment-layering-detection.md  feature-layering-detection.md  requirements-layering-detection.md
terraform/: alb.tf  autoscaling.tf  ecr.tf  ecs.tf  main.tf  monitoring.tf  outputs.tf  secrets.tf  security.tf  storage.tf  variables.tf  vpc.tf
tests/: conftest.py  test_detector.py  test_io.py  test_logging_utils.py  test_runner.py
(+109 files in other folders)
