[tool.poetry]
name = "layering-detection-analytics"
version = "0.1.0"
description = "Layering detection analytics for intraday market transactions."
authors = ["Annac <achaykovsky.career@gmail.com>"]
readme = "README.md"
packages = [{ include = "layering_detection", from = "src" }]

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^0.21.0"
fastapi = "^0.104.0"
httpx = "^0.25.0"

[build-system]
requires = ["poetry-core>=1.6.0,<1.7.0"]
build-backend = "poetry.core.masonry.api"


